@@ -107,7 +107,7 @@ def main(args):
 
 	# Ask threads to die and wait for them to do it
 	for thread in pool:
-		thread.join(timeout=60)
+		thread.join()
 
 if __name__ == '__main__':
 	import sys
