@@ -120,6 +120,12 @@ def main(args):
 	# Create the "thread pool"
 	pool = [WorkerThread(threadID=threadID) for i in range(int(run_threads[0]))]
 
+	if sys.argv[1] == "additional":
+		print("Fetch for: b = binary, s = sample, m = mediainfo, a = audio, j = jpeg")
+		print("^ added file content, o added previous, z = doing zip, r = doing rar, n = found nfo")
+	elif sys.argv[1] == "nfo":
+		print("* = hidden NFO, + = NFO, - = no NFO, f = download failed.")
+
 	# Start all threads
 	for thread in pool:
 		thread.start()
