@@ -301,7 +301,7 @@ class Net_NNTP_Protocol_Client extends PEAR
     {
     	// Retrieve a line (terminated by "\r\n") from the server.
         // RFC says max is 510, but IETF says "be liberal in what you accept"...
-    	$response = @fgets($this->_socket, 4096);
+    	$response = @fgets($this->_socket);
         if ($response === false) {
             return $this->throwError('Failed to read from socket...!');
         }
