@@ -86,14 +86,13 @@ class Nfo
 				if ($releaseToWork == '')
 					echo "Processing ".$nfocount." NFO(s), starting at ".$this->nzbs." * = hidden NFO, + = NFO, - = no NFO, f = download failed.\n";
 
-			$connect;
 			$movie = new Movie($this->echooutput);
-			//while ($arr = $db->fetchAssoc($res))
 			foreach ($res as $arr)
 			{
 				$guid = $arr['guid'];
 				$relID = $arr['ID'];
 				$groupID = $arr['groupID'];
+				$connect;
 				$fetchedBinary = $nzbcontents->getNFOfromNZB($guid, $relID, $groupID, $nntp);
 				if ($fetchedBinary !== false)
 				{
@@ -127,8 +126,8 @@ class Nfo
 						}
 					}
 				}
+				$nntp->doQuit();
 			}
-			$nntp->doQuit();
 		}
 
 		//remove nfo that we cant fetch after 5 attempts
