@@ -1,4 +1,6 @@
-07272013 -> jonnyboy ->	removed second rm -rf, bad placement
+07272013 -> jonnyboy ->	may have fixed some connection issues
+						added legend to output in postprocess
+						removed second rm -rf, bad placement
 						changed fixreleasenames to use inner join insteaqd of left join
 						changed tmpunrar folder creation to chmod 0777 from 0764, just in case
 						moved delete stale tmpunrar from threaded script to monitor
